fix: PR #57 리뷰 반영 보완